--- a/style.css
+++ b/style.css
@@ -112,23 +112,15 @@ form label{
 .form1{
     display: grid;
     grid-template-columns: 1fr 1fr;
-    column-gap: 10px;
-    row-gap: 8px;
-    margin-block-end: 24px;
-    grid-template-areas: 
-    "one two"
-    "three three"
-    "three three";
+    grid-gap: 10px;
+    /* margin-block-end: 24px; */
 }
-input[type="text"]:nth-child(1){
-    grid-area: one;
+.form1 .email{
+   margin-block-end: 24px;
+    grid-column: 1/3;
 }
-input[type="text"]:nth-child(2){
-    grid-area: two;
-}
-input[type="text"]:nth-child(3){
-    grid-area: three;
-    width: 100%;
+.form1 .email .form-input{
+  width: 80%;
 }
 .checkout{
     color: #1D2C3C;
@@ -164,7 +156,6 @@ color: #1D2C3C;
  font-size: 18px;
  font-family: Lato;
  font-weight: 700;
- word-wrap: break-word
 }
 .form-input{
     background-color: #EDEFF2;
@@ -173,7 +164,7 @@ color: #1D2C3C;
 }
 form::placeholder{
     color: #646E7A;
-    font-size: 10px;
+    font-size: 8px;
     font-family: Lato;
     font-weight: 400;
     word-wrap: break-word;
@@ -181,13 +172,14 @@ form::placeholder{
 }
 .span-input{
     width: 100%;
-    position: relative;
+    /* position: relative; */
+
 }
 .nest-span{
     font-size: 12px;
-    position: absolute;
-    right: 621px;
-    top: 552px;
+    position: relative;
+    left: 250px;
+    top: -28px; 
     color: #646E7A;
     font-weight: 100;
 }
@@ -264,7 +256,20 @@ form::placeholder{
   .display-inline img{
     border-radius: 20px;
   }
-  .copywrite{
+  /* .copywrite{
+    text-align: center;
+    margin-block-start: -150px;
+    color: #636B6F;
+  } */
+  .col-2 h5{
+    color: white;
+  }
+  .col-2 span{
+    color: white;
+    display: inline-block;
+    font-size: 28px;
+  }
+  footer{
     text-align: center;
     margin-block-start: -150px;
     color: #636B6F;
